--- a/htdocs/partial/main/list.html
+++ b/htdocs/partial/main/list.html
@@ -1,25 +1,11 @@
 ﻿
-<div class="markdown" style="display: block;">
-    <div class="header">
-        <a href="data/demo/Dialog/readme.md" target="_blank">概述
-        </a>
-    </div>
-    <div class="content">
-        <h2>Date 命名空间</h2>
-        <blockquote>
-            <p>日期时间工具。</p>
-        </blockquote>
-    </div>
-</div>
-
-
-<div class="table">
+<div class="panel">
     <div class="header">方法列表</div>
     <div class="content">
-        <table class="summaryTable" >
+        <table class="list">
             <thead>
                 <tr>
-                    <th scope="col"></th>
+                    <th scope="col">类型</th>
                     <th scope="col">名称</th>
                     <th scope="col">说明</th>
                 </tr>
@@ -27,8 +13,8 @@
             <tbody>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addDays" target="_blank">addDays</a>
@@ -39,8 +25,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addHours" target="_blank">addHours</a>
@@ -51,8 +37,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addMilliseconds" target="_blank">addMilliseconds</a>
@@ -63,8 +49,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addMinutes" target="_blank">addMinutes</a>
@@ -75,8 +61,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addMonths" target="_blank">addMonths</a>
@@ -87,8 +73,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addSeconds" target="_blank">addSeconds</a>
@@ -99,8 +85,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addWeeks" target="_blank">addWeeks</a>
@@ -111,8 +97,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-addYears" target="_blank">addYears</a>
@@ -123,8 +109,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-format" target="_blank">format</a>
@@ -135,8 +121,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-now" target="_blank">now</a>
@@ -147,8 +133,8 @@
                 </tr>
                 <tr>
                     <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法">
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法">
+                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
                     </td>
                     <td class="name">
                         <a href="method.html#Date-parse" target="_blank">parse</a>
@@ -157,7 +143,6 @@
                         把参数 value 解析成等价的日期时间实例。
                     </td>
                 </tr>
-
             </tbody>
         </table>
     </div>
