--- a/htdocs/partial/main/readme.html
+++ b/htdocs/partial/main/readme.html
@@ -1,6 +1,5 @@
 ﻿
-
-<div id="div-readme" class="markdown">
+<div id="div-readme" class="panel">
     <div id="div-readme-header" class="header">
         <!--
         <a href="data/demo/{name}/readme.md" target="_blank">
@@ -8,5 +7,7 @@
         </a>
         -->
     </div>
-    <div id="div-readme-content" class="content"></div>
+    <div id="div-readme-content" class="content markdown">
+
+    </div>
 </div>
