--- a/htdocs/css/index.debug.css
+++ b/htdocs/css/index.debug.css
@@ -1,127 +1,124 @@
-.container {
-  width: auto;
-  padding: 0px 32px 0 32px;
-}
-@media (max-width: 960px) {
-  .container {
-    width: 830px;
-  }
-}
-@media (min-width: 1440px) {
-  .container {
-    width: 1310px;
-  }
-}
 body {
   overflow-y: scroll;
 }
-.side-bar {
-  position: fixed;
-  height: 100%;
-  width: 130px;
+.hidden {
+  display: none;
 }
-.side-bar .banner {
-  text-align: center;
-  line-height: 55px;
-  height: 55px;
-  font-size: 16px;
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-.side-bar .banner .title {
-  font-size: 22px;
+blockquote,
+body,
+button,
+dd,
+dl,
+dt,
+fieldset,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+input,
+legend,
+li,
+ol,
+p,
+pre,
+td,
+textarea,
+th,
+ul {
+  margin: 0;
+  padding: 0;
 }
-.side-bar .menu-group {
-  width: 100%;
-  height: 30px;
+body,
+input,
+select,
+textarea {
+  color: #000;
+  font-family: Arial, Geneva, sans-serif;
 }
-.side-bar .menus {
-  text-align: left;
-  font-size: 14px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
 }
-.side-bar .menus .hover {
-  background: #EFEFEF !important;
-  font-weight: bold;
+address,
+cite,
+dfn,
+em,
+var {
+  font-style: normal;
 }
-.side-bar .menus li {
-  line-height: 30px;
-  cursor: pointer;
+code,
+kbd,
+pre,
+samp {
+  font-family: courier new,courier,monospace;
 }
-.side-bar .menus .icons {
-  background-color: transparent;
-  margin-right: 15px;
-  display: inline-block;
-  height: 20px;
-  vertical-align: sub;
+small {
+  font-size: 12px;
 }
-.content {
-  padding-left: 130px;
+li,
+ol {
+  list-style: none;
 }
-.content > .header {
-  line-height: 55px;
+ol,
+ul {
+  list-style: none;
 }
-.content .header .search-box {
-  margin-left: 35px;
-  border-bottom: 1px solid #d9dcdf;
-  height: 43px;
-  display: inline-block;
+a {
+  text-decoration: none;
 }
-.content .header .search-box .icon-search {
-  height: 15px;
-  padding-left: 17px;
-  display: inline-block;
-  background: url(img/icons.png) no-repeat 0px -53px;
+a:hover {
+  text-decoration: underline;
 }
-.content .header .search-box > input {
-  color: #929da7;
-  line-height: 30px;
-  font-family: italic;
-  width: 170px;
-  border: none;
-  border-bottom: 1px solid #d9dcdf;
+sup {
+  vertical-align: text-top;
+}
+sub {
+  vertical-align: text-bottom;
+}
+legend {
+  color: #141414;
+}
+fieldset,
+img {
+  border: 0;
+}
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
   outline: none;
 }
-.content .header .search-box > input::-webkit-input-placeholder {
-  color: #b6babd;
+.demo {
+  position: relative;
 }
-.header .title {
-  font-size: 1.5em;
-  letter-spacing: 1px;
-  line-height: 1em;
-  padding-top: 5px;
-  text-shadow: 1px 1px 1px #999999;
-  word-wrap: break-word;
+.demo .row-panel {
+  font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+  text-align: center;
+  position: absolute;
+  left: 15px;
+  top: 15px;
+  /*height: 100%;*/
+  background: #f2f2f2;
+  color: #8B9CC2;
+  width: 30px;
+  line-height: 20px;
+  margin-bottom: 0px !important;
+  padding: 4px 0px 0px 0;
 }
-.header .desc {
-  margin-bottom: 0.5em;
-  background: #F4F5F6;
-  padding: 10px 15px;
-  border: 1px solid #ddd;
-  font-family: 微软雅黑;
-  font-size: 1.1em;
-}
-.summaryTable {
-  font-size: 16px;
-  width: 100%;
-}
-.summaryTable th {
-  border: 1px solid #dddddd;
-  padding: 5px 5px;
-  text-align: left;
-}
-.summaryTable td {
-  border: 1px solid #dddddd;
-  padding: 8px 8px;
-  text-align: left;
-}
-.summaryTable td.type {
-  width: 46px;
-}
-.summaryTable td.desc {
-  width: 75%;
-}
-.summaryTable a:link,
-.summaryTable a:hover,
-.summaryTable a:active,
-.summaryTable a:visited {
-  text-decoration: underline;
-  color: #19199e;
+.demo pre code {
+  padding: 2px;
+  line-height: 20px;
 }
