--- a/htdocs/css/index.less
+++ b/htdocs/css/index.less
@@ -1,176 +1,157 @@
 ﻿
-.container {
-    width: auto;
-    padding: 0px 32px 0 32px;
-}
-
-@media (max-width: 960px) {
-    .container {
-        width: 830px;
-    }
-}
 
 
-@media (min-width: 1440px) {
-    .container {
-        width: 1310px;
-    }
-}
 
 body {
     overflow-y: scroll;
 }
 
-.side-bar {
-    position: fixed;
-    height: 100%;
-    width: 130px;
 
-    
-    .banner {
+.hidden {
+    display: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+
+
+blockquote,
+body,
+button,
+dd,
+dl,
+dt,
+fieldset,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+input,
+legend,
+li,
+ol,
+p,
+pre,
+td,
+textarea,
+th,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+
+body,
+input,
+select,
+textarea {
+	color: #000;
+	font-family: Arial, Geneva, sans-serif;
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: 100%;
+}
+
+address,
+cite,
+dfn,
+em,
+var {
+    font-style: normal;
+}
+
+code,
+kbd,
+pre,
+samp {
+    font-family: courier new,courier,monospace;
+}
+
+small {
+    font-size: 12px;
+}
+
+li,
+ol {
+    list-style: none;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+sup {
+    vertical-align: text-top;
+}
+
+sub {
+    vertical-align: text-bottom;
+}
+
+legend {
+    color: #141414;
+}
+
+fieldset,
+img {
+    border: 0;
+}
+
+button,
+input,
+select,
+textarea {
+    font-size: 100%;
+    outline: none;
+}
+
+
+
+.demo{
+    position: relative;
+    .row-panel{
+        font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
         text-align: center;
-        line-height: 55px;
-        height: 55px;
-        font-size: 16px;
-    
-
-        .title {
-            font-size: 22px;
-        }
-
+        position: absolute;
+        left: 15px;
+        top: 15px;
+        /*height: 100%;*/
+        background: #f2f2f2;
+        color: #8B9CC2;
+        width: 30px;
+        line-height: 20px;
+        margin-bottom: 0px !important; 
+        padding: 4px 0px 0px 0;
     }
 
-    .menu-group {
-        width: 100%;
-        height: 30px;
-    }
-
-    .menus {
-        text-align: left;
-        font-size: 14px;
-    
-
-        .hover {
-            background: #EFEFEF !important;
-            font-weight: bold;
+    pre{
+        code{
+            padding: 2px;
+            line-height: 20px;
         }
-
-        li {
-            line-height: 30px;
-            cursor: pointer;
-        }
-
-
-
-        .icons {
-            background-color: transparent;
-            margin-right: 15px;
-            display: inline-block;
-            height: 20px;
-            vertical-align: sub;
-        }
-
-    }
-}
-
-
-
-.content {
-    padding-left: 130px;
-
-
-    > .header {
-        line-height: 55px;
-    }
-
-    .header .search-box {
-        margin-left: 35px;
-        border-bottom: 1px solid #d9dcdf;
-        height: 43px;
-        display: inline-block;
-    
-
-        .icon-search {
-            height: 15px;
-            padding-left: 17px;
-            display: inline-block;
-            background: url(img/icons.png) no-repeat 0px -53px;
-        }
-
-        > input {
-            color: #929da7;
-            line-height: 30px;
-            font-family: italic;
-            width: 170px;
-            border: none;
-            border-bottom: 1px solid #d9dcdf;
-            outline: none;
-        
-
-            &::-webkit-input-placeholder {
-                color: #b6babd;
-            }
-        }
-
-    }
-
-}
-
-.header{
-
-    .title{
-        font-size: 1.5em;
-        letter-spacing: 1px;
-        line-height: 1em;
-        padding-top: 5px;
-        text-shadow: 1px 1px 1px #999999;
-        word-wrap: break-word;
-    }
-
-    .desc{
-        margin-bottom: 0.5em;
-        background: #F4F5F6;
-        padding: 10px 15px;
-        border: 1px solid #ddd;
-        font-family: 微软雅黑;
-        font-size: 1.1em;
-    }
-
-}
-
-
-.summaryTable {
-
-    font-size: 16px;
-    width: 100%;
- 
-
-    th {
-        border: 1px solid #dddddd;
-        padding: 5px 5px;
-        text-align: left;
-    }
-
-    td {
-        border: 1px solid #dddddd;
-        padding: 8px 8px;
-        text-align: left;
-
-        &.type{
-            width: 46px;
-        }
-
-        &.name{
-              
-        }
-
-        &.desc {
-          width: 75%;
-        }
-    }
-
-    a:link, a:hover, a:active, a:visited {
-        text-decoration: underline;
-        color: #19199e;
     }
 }
