--- a/htdocs/css/panel.less
+++ b/htdocs/css/panel.less
@@ -52,6 +52,19 @@
         &:last-child {
             margin-bottom: 0 !important;
         }
+
+        .definedInFile{
+            position: absolute;
+            right: 50px;
+            top: 140px;
+            font-size: 0.8em;
+            color: gray;
+        }
+
+        .summary{
+            font-family: "微软雅黑";
+            font-size: 1.1em;
+        }
     
         h2,h3,h4,h5 {
             margin-top: 13px;
@@ -132,8 +145,8 @@
 
         pre {
             margin: 0;
-            margin-left: 15px;
-            padding: 0px 15px;
+            margin-left: 30px;
+            padding: 0px 5px;
             background: #f7f7f7;
             -moz-border-radius: 3px;
             -webkit-border-radius: 3px;
