--- a/htdocs/partial/MainPanel/Auto/Method/Demo.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Demo.html
@@ -1,6 +1,6 @@
 ﻿<div class="panel">
     <div class="header">
-        源代码
+        示例代码
     </div>
     <div class="content demo">
         <ul class="row-panel">
@@ -25,3 +25,6 @@
 });</code></pre>
     </div>
 </div>
+
+
+
