--- a/htdocs/css/demos.less
+++ b/htdocs/css/demos.less
@@ -60,10 +60,9 @@
             font-size: 16px;
             border: 1px solid #dddddd;
             border-top-color: #eeeeee;
-            padding: 4px 10px 4px 31px;
+            padding: 0px 0px 0px 30px;
             position: relative;
-
-                
+     
             .bt-panel {
                 position: absolute;
                 top: 0;
@@ -82,6 +81,7 @@
 
             pre {
                 margin: 0;
+                padding-top: 2px;
 
                 code {
                     padding: 2px;
