--- a/htdocs/partial/MainPanel/Auto/Method.html
+++ b/htdocs/partial/MainPanel/Auto/Method.html
@@ -3,5 +3,5 @@
     <link rel="grunt" href="/Summary.html" />
     <link rel="grunt" href="/Params.html" data-comment="no" />
     <link rel="grunt" href="/Returns.html" data-comment="no" />
-    <link rel="grunt" href="/Demo.html" data-tab="no" />
+    <link rel="grunt" href="/Example.html" data-tab="no" />
 </div>
