--- a/htdocs/partial/MainPanel/Auto/Method/Returns.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Returns.html
@@ -3,7 +3,8 @@
     <div class="header">
         返回值
     </div>
-    <div class="content">
+    <div id="div-method-returns" class="content">
+    <!--
         <table class="params">
             <thead>
                 <tr>
@@ -12,16 +13,16 @@
                 </tr>
             </thead>
             <tbody>
+                #--tr.begin--#
                 <tr>
-                    <td class="type">Object</td>
+                    <td class="type">{type}</td>
                     <td class="desc">
-                        当事件处理函数的返回值满足一定时，将停止调用后面的处理函数。
-                        当 stop 为函数时，则需要在 stop 函数内明确返回 true 才停止。
-                        否则，事件处理的返回值跟 stop 完全相等时才停步。
+                        {desc}
                     </td>
                 </tr>
-                
+                #--tr.end--#
             </tbody>
         </table>
+    -->
     </div>
 </div>
