--- a/htdocs/partial/MainPanel/Auto/Method/Params.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Params.html
@@ -3,7 +3,8 @@
     <div class="header">
         参数列表
     </div>
-    <div class="content">
+    <div id="div-method-params" class="content">
+    <!--
         <table class="params">
             <thead>
                 <tr>
@@ -14,36 +15,17 @@
                 </tr>
             </thead>
             <tbody>
+                #--tr.begin--#
                 <tr>
-                    <td class="name"><code>config</code></td>
-                    <td class="type">Object</td>
-                    <td class="default"></td>
-                    <td class="desc">配置对象。</td>
+                    <td class="name"><code>{name}</code></td>
+                    <td class="type">{type}</td>
+                    <td class="default">{defaultValue}</td>
+                    <td class="desc">{desc}</td>
                 </tr>
-                <tr>
-                    <td class="name"><code>config.names</code></td>
-                    <td class="type">Array</td>
-                    <td class="default"></td>
-                    <td class="desc">事件名称列表。</td>
-                </tr>
-                <tr>
-                    <td class="name"><code>config.args</code></td>
-                    <td class="type">Array</td>
-                    <td class="default"></td>
-                    <td class="desc">要传递给事件处理函数的参数数据。</td>
-                </tr>
-                <tr>
-                    <td class="name"><code>config.stop</code></td>
-                    <td class="type"></td>
-                    <td class="default"></td>
-                    <td class="desc">
-                        当事件处理函数的返回值满足一定时，将停止调用后面的处理函数。
-                        当 stop 为函数时，则需要在 stop 函数内明确返回 true 才停止。
-                        否则，事件处理的返回值跟 stop 完全相等时才停步。
-                    </td>
-                </tr>
-                
+                #--tr.end--#
             </tbody>
         </table>
+    -->
+
     </div>
 </div>
