--- a/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
+++ b/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
@@ -1,8 +1,8 @@
 ﻿
-
 <div class="panel">
     <div class="header">方法列表</div>
-    <div class="content">
+    <div id="div-method-list" class="content">
+    <!--
         <table class="list">
             <thead>
                 <tr>
@@ -12,140 +12,27 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                #--tr.begin--#
+                <tr data-index="{index}">
                     <td class="type">
                         <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
+
+                        #--icon.static.begin--#
                         <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
+                        #--icon.static.end--#
+
                     </td>
                     <td class="name">
-                        <a href="method.html#Date-addDays" target="_blank">addDays</a>
+                        <a href="javascript:" data-index="{index}">{name}</a>
                     </td>
                     <td class="desc">
-                        将指定的天数加到指定的 Date 实例上。
+                        {desc}
                     </td>
                 </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-addHours" target="_blank">addHours</a>
-                    </td>
-                    <td class="desc">
-                        将指定的小时数加到指定的 Date 实例上。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-addMilliseconds" target="_blank">addMilliseconds</a>
-                    </td>
-                    <td class="desc">
-                        将指定的毫秒数加到指定的 Date 实例上。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-addMinutes" target="_blank">addMinutes</a>
-                    </td>
-                    <td class="desc">
-                        将指定的分钟数加到指定的 Date 实例上。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-addMonths" target="_blank">addMonths</a>
-                    </td>
-                    <td class="desc">
-                        将指定的月份数加到指定的 Date 实例上。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-addSeconds" target="_blank">addSeconds</a>
-                    </td>
-                    <td class="desc">
-                        将指定的秒数加到指定的 Date 实例上。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-addWeeks" target="_blank">addWeeks</a>
-                    </td>
-                    <td class="desc">
-                        将指定的周数加到指定的 Date 实例上。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-addYears" target="_blank">addYears</a>
-                    </td>
-                    <td class="desc">
-                        将指定的年份数加到指定的 Date 实例上。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-format" target="_blank">format</a>
-                    </td>
-                    <td class="desc">
-                        把日期时间格式化指定格式的字符串。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-now" target="_blank">now</a>
-                    </td>
-                    <td class="desc">
-                        获取当前系统时间。
-                    </td>
-                </tr>
-                <tr>
-                    <td class="type">
-                        <img src="css/img/method.bmp" alt="公共方法" title="公共方法" />
-                        <img src="css/img/static.bmp" alt="静态方法" title="静态方法" />
-                    </td>
-                    <td class="name">
-                        <a href="method.html#Date-parse" target="_blank">parse</a>
-                    </td>
-                    <td class="desc">
-                        把参数 value 解析成等价的日期时间实例。
-                    </td>
-                </tr>
+                #--tr.end--#
             </tbody>
         </table>
+    -->
     </div>
 </div>
 
