--- a/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
+++ b/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="panel">
+<div id="panel-method-list" class="panel">
     <div class="header">方法列表</div>
     <div id="div-method-list" class="content">
     <!--
