--- a/htdocs/partial/MainPanel/Auto/Overview/Summary.html
+++ b/htdocs/partial/MainPanel/Auto/Overview/Summary.html
@@ -7,7 +7,7 @@
     <!--
         <h2>{name} {typeDesc}</h2>
         <p class="definedInFile">
-			定义在：<a href="#" target="_blank">{srcFileName}</a>
+			定义在：<a data-cmd="source" href="javascript:">{srcFileName}</a>
         </p>
         <p class="summary">{desc}</p>
     -->
