--- a/htdocs/css/demos.debug.css
+++ b/htdocs/css/demos.debug.css
@@ -34,8 +34,8 @@
   padding: 0 20px;
 }
 .demos > li .tabs .on {
-  border: 1px solid #dddddd;
-  margin-top: -1px;
+  /*border: 1px solid #dddddd;*/
+  /*margin-top: -1px;*/
   -moz-transition: background 0.3s;
   -o-transition: background 0.3s;
   -webkit-transition: background 0.3s;
