--- a/htdocs/css/demos.less
+++ b/htdocs/css/demos.less
@@ -43,8 +43,8 @@
             }
 
             .on {
-                border: 1px solid #dddddd;
-                margin-top: -1px;
+                /*border: 1px solid #dddddd;*/
+                /*margin-top: -1px;*/
                 -moz-transition: background 0.3s;
                 -o-transition: background 0.3s;
                 -webkit-transition: background 0.3s;
