--- a/htdocs/css/panel.debug.css
+++ b/htdocs/css/panel.debug.css
@@ -102,7 +102,7 @@
 .panel .content p,
 .panel .content ul {
   margin-top: 0;
-  margin-bottom: 16px;
+  /*margin-bottom: 16px;*/
 }
 .panel .content a {
   color: #4183c4;
@@ -112,7 +112,7 @@
   text-decoration: underline;
 }
 .panel .content code {
-  padding: 3px 4px;
+  padding: 3px 4px 21px 4px;
   color: #c7254e;
   background-color: #f9f2f4;
   font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
