--- a/htdocs/css/panel.less
+++ b/htdocs/css/panel.less
@@ -121,7 +121,7 @@
 
         p, ul {
             margin-top: 0;
-            margin-bottom: 16px;
+            /*margin-bottom: 16px;*/
         }
 
         a {
@@ -137,7 +137,7 @@
         
 
         code {
-            padding: 3px 4px;
+            padding: 3px 4px 21px 4px;
             color: #c7254e;
             background-color: #f9f2f4;
             font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
