--- a/htdocs/css/list.debug.css
+++ b/htdocs/css/list.debug.css
@@ -20,6 +20,10 @@
 }
 .list td.desc {
   width: 75%;
+}
+.list td.desc pre {
+  margin-left: 0px;
+  background: none;
   font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
 }
 .list a:link,
