--- a/htdocs/css/list.less
+++ b/htdocs/css/list.less
@@ -26,7 +26,13 @@
 
         &.desc {
             width: 75%;
-            font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+            
+
+            pre {
+                margin-left: 0px;
+                background: none;
+                font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+            }
         }
     }
 
