--- a/htdocs/partial/MainPanel/Auto/Method/Params.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Params.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="panel">
+<div id="panel-method-params" class="panel">
     <div class="header">
         参数列表
     </div>
@@ -20,7 +20,7 @@
                     <td class="name"><code>{name}</code></td>
                     <td class="type">{type}</td>
                     <td class="default">{defaultValue}</td>
-                    <td class="desc">{desc}</td>
+                    <td class="desc"><pre class="hljs">{desc}</pre></td>
                 </tr>
                 #--tr.end--#
             </tbody>
