--- a/htdocs/partial/sidebar.html
+++ b/htdocs/partial/sidebar.html
@@ -7,7 +7,7 @@
     <div class="menu-group"></div>
     <ul id="ul-sidebar" class="menus">
         <!--
-        <li data-index="{index}" draggable="true">
+        <li data-index="{index}">
             <i class="icons" ></i>
             {text}
         </li>
