--- a/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
+++ b/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
@@ -26,7 +26,7 @@
                         <a href="javascript:" data-index="{index}">{name}</a>
                     </td>
                     <td class="desc">
-                        {desc}
+                        <pre class="hljs">{desc}</pre>
                     </td>
                 </tr>
                 #--tr.end--#
