--- a/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
+++ b/htdocs/partial/MainPanel/Auto/Overview/MethodList.html
@@ -1,6 +1,8 @@
 ﻿
 <div id="panel-method-list" class="panel">
-    <div class="header">方法列表</div>
+    <div class="header">
+        <span>方法列表</span>
+    </div>
     <div id="div-method-list" class="content">
     <!--
         <table class="list">
