--- a/htdocs/partial/MainPanel/Auto/Overview/PropertyList.html
+++ b/htdocs/partial/MainPanel/Auto/Overview/PropertyList.html
@@ -1,6 +1,8 @@
 ﻿
 <div id="panel-property-list" class="panel">
-    <div class="header">属性列表</div>
+    <div class="header">
+        <span>属性列表</span>
+    </div>
     <div id="div-property-list" class="content">
     <!--
         <table class="list">
