--- a/htdocs/partial/MainPanel/Manual/Demos.html
+++ b/htdocs/partial/MainPanel/Manual/Demos.html
@@ -1,6 +1,8 @@
 ﻿
-<div class="panel">
-    <div class="header">示例</div>
+<div id="panel-demos" class="panel">
+    <div class="header">
+        <span>示例</span>
+    </div>
     <div class="content">
         <ul id="ul-demos" class="demos">
             <!--
