--- a/htdocs/partial/MainPanel/Manual/Readme.html
+++ b/htdocs/partial/MainPanel/Manual/Readme.html
@@ -1,10 +1,9 @@
 ﻿
 <div id="div-readme" class="panel">
-    <div id="div-readme-header" class="header">
+    <div id="div-readme-header" class="header readme">
         <!--
-        <a href="data/demo/{name}/readme.md" target="_blank">
-            readme.md
-        </a>
+        <span>readme.md</span>
+        <a class="" href="data/demo/{name}/readme.md" target="_blank">打开</a>
         -->
     </div>
     <div id="div-readme-content" class="content markdown">
