--- a/htdocs/partial/sidebar.html
+++ b/htdocs/partial/sidebar.html
@@ -1,4 +1,4 @@
-﻿<div class="side-bar">
+﻿<nav class="side-bar">
     <div id="div-sidebar-title" class="banner">
         <!--
         <span class="title">{title}</span> {type}
@@ -7,10 +7,10 @@
     <div class="menu-group"></div>
     <ul id="ul-sidebar" class="menus">
         <!--
-        <li data-index="{index}">
+        <li class="leave" data-index="{index}">
             <i class="icons" ></i>
-            {text}
+            <span>{text}</span>
         </li>
         -->
     </ul>
-</div>
+</nav>
