--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -1,11 +1,12 @@
 .main {
-  margin-left: 170px;
+  float: right;
+  width: 85%;
 }
 .main > .header {
   line-height: 55px;
 }
 .main > .header .search-box {
-  margin-left: 35px;
+  /*margin-left: 35px;*/
   border-bottom: 1px solid #d9dcdf;
   height: 43px;
   display: inline-block;
@@ -17,18 +18,16 @@
   background: url(img/icons.png) no-repeat 0px -53px;
 }
 .main > .header .search-box > input {
-  color: #929da7;
+  color: #000;
   line-height: 30px;
   font-family: italic;
   width: 170px;
   border: none;
-  border-bottom: 1px solid #d9dcdf;
+  /*border-bottom: 1px solid #d9dcdf;*/
   outline: none;
+  font-weight: bold;
 }
 .main > .header .search-box > input::-webkit-input-placeholder {
   color: #b6babd;
-}
-.main .container {
-  width: auto;
-  padding: 0px 32px 0 32px;
+  font-weight: normal;
 }
