--- a/htdocs/partial/MainPanel/Auto/Method/Params.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Params.html
@@ -10,6 +10,7 @@
                 <tr>
                     <th>名称</th>
                     <th>类型</th>
+                    <th>必选</th>
                     <th>默认值</th>
                     <th>描述</th>
                 </tr>
@@ -19,8 +20,9 @@
                 <tr>
                     <td class="name"><code>{name}</code></td>
                     <td class="type">{type}</td>
+                    <td class="optional">{optional}</td>
                     <td class="default">{defaultValue}</td>
-                    <td class="desc"><pre class="hljs">{desc}</pre></td>
+                    <td class="desc "hljs">{desc}</td>
                 </tr>
                 #--tr.end--#
             </tbody>
