--- a/htdocs/partial/MainPanel/Auto/Method/Summary.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Summary.html
@@ -2,9 +2,12 @@
     <div class="header">
         方法概述
     </div>
-    <div id="div-method-summary" class="content">
+    <div id="div-method-summary" class="content method-summary">
     <!--
         <h2>{memberOf}.{name} {typeDesc}方法</h2>
+        <blockquote class="syntax">
+            <span class="hljs-built_in">{memberOf}</span><span class="symbol">.</span><span class="name">{name}</span><span class="params"><span class="symbol">(</span>#--param.begin--#{name}<span class="symbol">,</span> #--param.end--#<span class="symbol">)</span></span></span>
+        </blockquote>
         <p class="summary">
             {desc}
         </p>
