--- a/htdocs/partial/MainPanel/Auto/Overview/Summary.html
+++ b/htdocs/partial/MainPanel/Auto/Overview/Summary.html
@@ -1,13 +1,13 @@
 ﻿
 <div class="panel">
     <div class="header">
-        概述
+        <span>概述</span>
     </div>
     <div id="div-MainPanel/Auto/Overview/Summary-content" class="content">
     <!--
         <h2>{name} {typeDesc}</h2>
         <p class="definedInFile">
-			定义在：<a data-cmd="source" href="javascript:">{srcFileName}</a>
+			定义在：<a data-cmd="source" href="javascript:" title="点击查看源代码">{srcFileName}</a>
         </p>
         <p class="summary">{desc}</p>
     -->
