--- a/htdocs/partial/MainPanel/Auto/Source.html
+++ b/htdocs/partial/MainPanel/Auto/Source.html
@@ -1,10 +1,11 @@
 ﻿
 <div  id="view-Source" style="display: none;">
-    源文件 src/api/API.js
-
     <div class="panel">
-        <div class="header">
-            源代码
+        <div id="div-source-header" class="header source">
+        <!--
+            <span>源代码</span>
+            <a href="data/source/{href}" target="_blank">打开</a>
+         -->
         </div>
         <div class="content demo">
             <link rel="grunt" href="/Lines.html" />
