--- a/htdocs/partial/MainPanel/Auto/Method/Example.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Example.html
@@ -1,6 +1,6 @@
 ﻿<div id="panel-method-example" class="panel">
     <div class="header">
-        示例代码
+        <span>示例代码</span>
     </div>
     <div class="content demo">
         <ul id="ul-method-example-lines" class="row-panel">
