--- a/htdocs/partial/MainPanel/Auto/Method/Params.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Params.html
@@ -1,7 +1,7 @@
 ﻿
 <div id="panel-method-params" class="panel">
     <div class="header">
-        参数列表
+        <span>参数列表</span>
     </div>
     <div id="div-method-params" class="content">
     <!--
