--- a/htdocs/partial/MainPanel/Auto/Method/Returns.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Returns.html
@@ -1,7 +1,7 @@
 ﻿
 <div id="panel-method-returns" class="panel">
     <div class="header">
-        返回值
+        <span>返回值</span>
     </div>
     <div id="div-method-returns" class="content">
     <!--
