--- a/htdocs/partial/MainPanel/Auto/Method/Summary.html
+++ b/htdocs/partial/MainPanel/Auto/Method/Summary.html
@@ -1,6 +1,6 @@
 ﻿<div class="panel">
     <div class="header">
-        方法概述
+        <span>方法概述</span>
     </div>
     <div id="div-method-summary" class="content method-summary">
     <!--
