--- a/htdocs/partial/MainPanel/Auto/Source.html
+++ b/htdocs/partial/MainPanel/Auto/Source.html
@@ -8,6 +8,7 @@
          -->
         </div>
         <div class="content demo">
+            <mark id="mark-line"></mark>
             <link rel="grunt" href="/Lines.html" />
             <link rel="grunt" href="/Code.html" data-tab="no" />
         </div>
