--- a/htdocs/css/index.debug.css
+++ b/htdocs/css/index.debug.css
@@ -111,12 +111,13 @@ textarea {
   left: 15px;
   top: 15px;
   /*height: 100%;*/
-  background: #f2f2f2;
+  /*background: #f2f2f2;*/
   color: #8B9CC2;
   width: 30px;
   line-height: 20px;
   margin-bottom: 0px !important;
   padding: 4px 0px 0px 0;
+  border-right: solid 1px #ddd;
 }
 .demo pre code {
   padding: 2px;
