--- a/htdocs/css/sidebar.less
+++ b/htdocs/css/sidebar.less
@@ -35,11 +35,11 @@
         .on {
             /*background: #EFEFEF !important;*/
             font-weight: bold;
-            border-right: solid 4px #B093E3;
+            border-right: solid 6px #6CE26C;
             background: #fff;
 
             span {
-                margin-right: 5px;
+                margin-right: 6px;
             }
         }
 
