--- a/htdocs/partial/sidebar.html
+++ b/htdocs/partial/sidebar.html
@@ -7,7 +7,7 @@
     <div class="menu-group"></div>
     <ul id="ul-sidebar" class="menus">
         <!--
-        <li class="leave" data-index="{index}">
+        <li data-index="{index}">
             <i class="icons" ></i>
             <span>{text}</span>
         </li>
