--- a/htdocs/partial/MainPanel/Manual/Readme.html
+++ b/htdocs/partial/MainPanel/Manual/Readme.html
@@ -3,7 +3,7 @@
     <div id="div-readme-header" class="header readme">
         <!--
         <span>readme.md</span>
-        <a class="" href="data/demo/{name}/readme.md" target="_blank">打开</a>
+        <a class="" href="{path}/{name}/readme.md" target="_blank">打开</a>
         -->
     </div>
     <div id="div-readme-content" class="content markdown">
