--- a/htdocs/style/less/panel.less
+++ b/htdocs/style/less/panel.less
@@ -28,7 +28,7 @@
 
         &:before {
             content: '';
-            background: url(../img/collapse0.bmp) no-repeat left 5px;
+            background: data-uri('image/jpeg;base64', '../img/collapse0.bmp') no-repeat left 5px;
             width: 14px;
             display: inline-block;
             height: 14px;
@@ -43,7 +43,7 @@
             color: #8B9EDE;
 
             &:before {
-                background: url(../img/collapse1.bmp) no-repeat left 5px;
+                background: data-uri('image/jpeg;base64', '../img/collapse1.bmp') no-repeat left 5px;
             }
         }
 
