--- a/htdocs/partial/MainPanel/Auto/Source.html
+++ b/htdocs/partial/MainPanel/Auto/Source.html
@@ -5,7 +5,7 @@
         <div id="div-source-header" class="header source">
         <!--
             <span>源代码</span>
-            <a href="data/jsdoc/{href}" target="_blank">打开</a>
+            <a href="data/{href}" target="_blank">打开</a>
          -->
         </div>
         <div class="content demo">
