--- a/htdocs/style/less/main.less
+++ b/htdocs/style/less/main.less
@@ -20,7 +20,7 @@
                 height: 15px;
                 padding-left: 17px;
                 display: inline-block;
-                background: url(../img/icons.png) no-repeat 0px -53px;
+                background: data-uri('image/png;base64', '../img/icons.png') no-repeat 0px -53px;
             }
 
             > input {
