--- a/htdocs/style/less/sidebar.less
+++ b/htdocs/style/less/sidebar.less
@@ -21,6 +21,8 @@
         /*height: 30px;*/
     }
 
+
+
     .menus {
         text-align: left;
         font-size: 14px;
@@ -64,7 +66,7 @@
             height: 16px;
             width: 16px;
             vertical-align: sub;
-            background: url(../img/class.bmp) no-repeat;
+            background: data-uri('image/jpeg;base64', '../img/class.bmp') no-repeat;
 
             &.hidden {
                 background-image: none;
