--- a/htdocs/modules/readme/readme.less
+++ b/htdocs/modules/readme/readme.less
@@ -10,6 +10,11 @@ body.readme {
 body.source {
 
     .header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 2;
+
         background: #f5f5f5;
         height: 35px;
         display: -webkit-box;
@@ -55,6 +60,10 @@ body.source {
         pointer-events: none;
         border-radius: 3px;
         box-sizing: border-box;
+    }
+
+    .content {
+        margin-top: 36px;
     }
 }
 
