--- a/htdocs/style/css/modules.readme.readme.debug.css
+++ b/htdocs/style/css/modules.readme.readme.debug.css
@@ -5,6 +5,10 @@ body.readme {
   margin-bottom: 10px;
 }
 body.source .header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
   background: #f5f5f5;
   height: 35px;
   display: -webkit-box;
@@ -43,6 +47,9 @@ body.source .current-line {
   pointer-events: none;
   border-radius: 3px;
   box-sizing: border-box;
+}
+body.source .content {
+  margin-top: 36px;
 }
 .view-readme {
   -webkit-box-align: center;
