--- a/htdocs/style/less/panel.less
+++ b/htdocs/style/less/panel.less
@@ -86,6 +86,7 @@
         -webkit-border-bottom-left-radius: 3px;
         border-bottom-left-radius: 3px;
         padding: 15px 15px;
+        overflow: hidden;
 
         &.method-summary {
             .syntax {
@@ -254,6 +255,13 @@
 
         pre.soure-line-numbers {
             margin-left: 30px;
+
+            /*隐藏 js 中的注释*/
+            .no-comments {
+                .hljs-comment {
+                    display: none;
+                }
+            }
         }
 
         table {
