--- a/htdocs/style/less/list.less
+++ b/htdocs/style/less/list.less
@@ -21,7 +21,7 @@
         }
 
         &.name{
-            font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+            font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
         }
 
         &.desc {
@@ -31,7 +31,7 @@
             pre {
                 margin-left: 0px;
                 background: none;
-                font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+                font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
             }
         }
     }
