--- a/htdocs/style/less/panel.less
+++ b/htdocs/style/less/panel.less
@@ -227,7 +227,7 @@
             padding: 3px 4px 3px 4px;
             color: #c7254e;
             background-color: #f9f2f4;
-            font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+            font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
         }
 
         pre {
@@ -266,7 +266,7 @@
 
         table {
             width: 100%;
-            font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+            font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
 
             th, td {
                 border: 1px solid #dddddd;
@@ -280,14 +280,14 @@
                         padding: 3px 4px 3px 4px;
                         color: #c7254e;
                         background-color: #f9f2f4;
-                        font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+                        font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
                     }
                 }
 
                 .type {
                     width: 10%;
                     color: blue;
-                    font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+                    font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
                 }
 
                 .default {
