--- a/htdocs/style/css/style.less.demos.debug.css
+++ b/htdocs/style/css/style.less.demos.debug.css
@@ -81,10 +81,10 @@
   width: 100%;
   height: 450px;
   border: none;
-  font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+  font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
 }
 .demos > li .content .row-panel {
-  font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+  font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
   text-align: center;
   position: absolute;
   left: 0;
