--- a/htdocs/style/css/style.less.index.debug.css
+++ b/htdocs/style/css/style.less.index.debug.css
@@ -106,7 +106,7 @@ textarea {
   position: relative;
 }
 .demo .row-panel {
-  font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+  font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
   text-align: center;
   position: absolute;
   left: 15px;
