--- a/htdocs/style/less/index.less
+++ b/htdocs/style/less/index.less
@@ -135,7 +135,7 @@ textarea {
 .demo{
     position: relative;
     .row-panel{
-        font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+        font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
         text-align: center;
         position: absolute;
         left: 15px;
