--- a/htdocs/style/less/markdown.less
+++ b/htdocs/style/less/markdown.less
@@ -16,7 +16,7 @@
         border-collapse: collapse;
         border-spacing: 0;
         width: 100%;
-        /*font-family: 'Fixedsys Excelsior 3.01' Fixedsys;*/
+        /*font-family: 'Fixedsys Excelsior 3.01', Fixedsys;*/
         font-family: 'Helvetica Neue', Arial, 'Hiragino Sans GB', STHeiti, 'Microsoft YaHei', 'WenQuanYi Micro Hei', SimSun, Song, sans-serif;
         font-size: 16px;
 
@@ -38,7 +38,7 @@
         padding: 3px 4px 3px 4px;
         color: #c7254e;
         background-color: #f9f2f4;
-        font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+        font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
     }
 
     pre {
@@ -140,7 +140,7 @@
 
         >ul {
             padding-left: 0px;
-            font-family: 'Fixedsys Excelsior 3.01' Fixedsys;
+            font-family: 'Fixedsys Excelsior 3.01', Fixedsys;
             text-align: center;
             position: absolute;
             /*background: #f2f2f2;*/
