table thead style

--- a/htdocs/style/css/style.less.markdown.debug.css
+++ b/htdocs/style/css/style.less.markdown.debug.css
@@ -15,6 +15,9 @@
   font-family: 'Helvetica Neue', Arial, 'Hiragino Sans GB', STHeiti, 'Microsoft YaHei', 'WenQuanYi Micro Hei', SimSun, Song, sans-serif;
   font-size: 16px;
 }
+.Markdown table thead {
+  background: #F0F0F0;
+}
 .Markdown table th,
 .Markdown table td {
   border: 1px solid #dddddd;
