--- a/htdocs/style/less/markdown.less
+++ b/htdocs/style/less/markdown.less
@@ -20,12 +20,17 @@
         font-family: 'Helvetica Neue', Arial, 'Hiragino Sans GB', STHeiti, 'Microsoft YaHei', 'WenQuanYi Micro Hei', SimSun, Song, sans-serif;
         font-size: 16px;
 
+        thead {
+            background: #F0F0F0;
+        }
+
         th, td {
             border: 1px solid #dddddd;
             padding: 5px 5px;
             text-align: left;
         }
 
+    
         code {
             padding: 3px 4px 3px 4px;
             font-family: 'Helvetica Neue', Arial, 'Hiragino Sans GB', STHeiti, 'Microsoft YaHei', 'WenQuanYi Micro Hei', SimSun, Song, sans-serif;
